[package]
name = "lambda"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for closures with shorthand argument names (like in Swift)"
readme = "README.md"
edition = "2018"

[dependencies]
proc-macro-hack = { version = "0.5.15", optional = true }
lambda-macro = { path = "macro", version = "0.1.0" }

[dev-dependencies]
anyhow = "1.0.27"

[features]
default = ["proc-macro-hack"]
nightly = ["lambda-macro/nightly", "unstable"]
unstable = []