[package]
name = "lambda-macro"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Lambda procedural macro"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["extra-traits", "full"] }
proc-macro-hack = { version = "0.5.15", optional = true }

[features]
default = ["proc-macro-hack"]
nightly = ["unstable"]
unstable = []